// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DecryptionFailureBar /> Displays a loading spinner 1`] = `
<div
  class="mx_DecryptionFailureBar"
>
  <div
    class="mx_DecryptionFailureBar_start"
  >
    <div
      class="mx_DecryptionFailureBar_start_status"
    >
      <div
        data-testid="decryption-failure-bar-indicator"
      >
        <div
          class="mx_Spinner"
        >
          <div
            aria-label="Loading…"
            class="mx_Spinner_icon"
            data-testid="spinner"
            role="progressbar"
            style="width: 24px; height: 24px;"
          />
        </div>
      </div>
    </div>
    <div
      class="mx_DecryptionFailureBar_start_headline"
    >
      Decrypting messages…
    </div>
    <div
      class="mx_DecryptionFailureBar_start_message"
    >
      Please wait while your messages are decrypted. This may take a few moments. Opening Element on another device can speed this up.
    </div>
  </div>
  <div
    class="mx_DecryptionFailureBar_end"
  />
</div>
`;

exports[`<DecryptionFailureBar /> Displays button to resend key requests if we are verified and developerMode is enabled 1`] = `
<div
  class="mx_DecryptionFailureBar mx_DecryptionFailureBar--withEnd"
>
  <div
    class="mx_DecryptionFailureBar_start"
  >
    <div
      class="mx_DecryptionFailureBar_start_status"
    >
      <div
        data-testid="decryption-failure-bar-indicator"
      >
        <div
          class="mx_DecryptionFailureBar_start_status_icon"
          data-testid="decryption-failure-bar-icon"
        />
      </div>
    </div>
    <div
      class="mx_DecryptionFailureBar_start_headline"
    >
      Some messages could not be decrypted
    </div>
    <div
      class="mx_DecryptionFailureBar_start_message"
    >
      Unfortunately, there are no other verified devices to request decryption keys from. Signing in and verifying other devices may help avoid this situation in the future.
    </div>
  </div>
  <div
    class="mx_DecryptionFailureBar_end"
  >
    <div
      class="mx_AccessibleButton mx_DecryptionFailureBar_end_button mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary"
      data-testid="decryption-failure-bar-button"
      role="button"
      tabindex="0"
    >
      Resend key requests
    </div>
  </div>
</div>
`;

exports[`<DecryptionFailureBar /> Displays button to resend key requests if we are verified and developerMode is enabled 2`] = `null`;

exports[`<DecryptionFailureBar /> Displays the button to resend key requests only if there are sessions we haven't already requested and developerMode is enabled 1`] = `
<div
  class="mx_DecryptionFailureBar mx_DecryptionFailureBar--withEnd"
>
  <div
    class="mx_DecryptionFailureBar_start"
  >
    <div
      class="mx_DecryptionFailureBar_start_status"
    >
      <div
        data-testid="decryption-failure-bar-indicator"
      >
        <div
          class="mx_DecryptionFailureBar_start_status_icon"
          data-testid="decryption-failure-bar-icon"
        />
      </div>
    </div>
    <div
      class="mx_DecryptionFailureBar_start_headline"
    >
      Some messages could not be decrypted
    </div>
    <div
      class="mx_DecryptionFailureBar_start_message"
    >
      Unfortunately, there are no other verified devices to request decryption keys from. Signing in and verifying other devices may help avoid this situation in the future.
    </div>
  </div>
  <div
    class="mx_DecryptionFailureBar_end"
  >
    <div
      class="mx_AccessibleButton mx_DecryptionFailureBar_end_button mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary"
      data-testid="decryption-failure-bar-button"
      role="button"
      tabindex="0"
    >
      Resend key requests
    </div>
  </div>
</div>
`;

exports[`<DecryptionFailureBar /> Displays the button to resend key requests only if there are sessions we haven't already requested and developerMode is enabled 2`] = `null`;

exports[`<DecryptionFailureBar /> Displays the button to resend key requests only if there are sessions we haven't already requested and developerMode is enabled 3`] = `
<div
  class="mx_DecryptionFailureBar mx_DecryptionFailureBar--withEnd"
>
  <div
    class="mx_DecryptionFailureBar_start"
  >
    <div
      class="mx_DecryptionFailureBar_start_status"
    >
      <div
        data-testid="decryption-failure-bar-indicator"
      >
        <div
          class="mx_DecryptionFailureBar_start_status_icon"
          data-testid="decryption-failure-bar-icon"
        />
      </div>
    </div>
    <div
      class="mx_DecryptionFailureBar_start_headline"
    >
      Some messages could not be decrypted
    </div>
    <div
      class="mx_DecryptionFailureBar_start_message"
    >
      Unfortunately, there are no other verified devices to request decryption keys from. Signing in and verifying other devices may help avoid this situation in the future.
    </div>
  </div>
  <div
    class="mx_DecryptionFailureBar_end"
  >
    <div
      class="mx_AccessibleButton mx_DecryptionFailureBar_end_button mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary"
      data-testid="decryption-failure-bar-button"
      role="button"
      tabindex="0"
    >
      Resend key requests
    </div>
  </div>
</div>
`;

exports[`<DecryptionFailureBar /> Displays the button to resend key requests only if there are sessions we haven't already requested and developerMode is enabled 4`] = `null`;

exports[`<DecryptionFailureBar /> Does not display a button to send key requests if we are unverified 1`] = `
<div
  class="mx_DecryptionFailureBar mx_DecryptionFailureBar--withEnd"
>
  <div
    class="mx_DecryptionFailureBar_start"
  >
    <div
      class="mx_DecryptionFailureBar_start_status"
    >
      <div
        data-testid="decryption-failure-bar-indicator"
      >
        <div
          class="mx_DecryptionFailureBar_start_status_icon"
          data-testid="decryption-failure-bar-icon"
        />
      </div>
    </div>
    <div
      class="mx_DecryptionFailureBar_start_headline"
    >
      Verify this device to access all messages
    </div>
    <div
      class="mx_DecryptionFailureBar_start_message"
    >
      This device was unable to decrypt some messages because it has not been verified yet.
    </div>
  </div>
  <div
    class="mx_DecryptionFailureBar_end"
  >
    <div
      class="mx_AccessibleButton mx_DecryptionFailureBar_end_button mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary"
      data-testid="decryption-failure-bar-button"
      role="button"
      tabindex="0"
    >
      Verify
    </div>
  </div>
</div>
`;

exports[`<DecryptionFailureBar /> Handles device updates 1`] = `
<div
  class="mx_DecryptionFailureBar mx_DecryptionFailureBar--withEnd"
>
  <div
    class="mx_DecryptionFailureBar_start"
  >
    <div
      class="mx_DecryptionFailureBar_start_status"
    >
      <div
        data-testid="decryption-failure-bar-indicator"
      >
        <div
          class="mx_DecryptionFailureBar_start_status_icon"
          data-testid="decryption-failure-bar-icon"
        />
      </div>
    </div>
    <div
      class="mx_DecryptionFailureBar_start_headline"
    >
      Verify this device to access all messages
    </div>
    <div
      class="mx_DecryptionFailureBar_start_message"
    >
      This device was unable to decrypt some messages because it has not been verified yet.
    </div>
  </div>
  <div
    class="mx_DecryptionFailureBar_end"
  >
    <div
      class="mx_AccessibleButton mx_DecryptionFailureBar_end_button mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary"
      data-testid="decryption-failure-bar-button"
      role="button"
      tabindex="0"
    >
      Verify
    </div>
  </div>
</div>
`;

exports[`<DecryptionFailureBar /> Prompts the user to verify if they have backups 1`] = `
<div
  class="mx_DecryptionFailureBar mx_DecryptionFailureBar--withEnd"
>
  <div
    class="mx_DecryptionFailureBar_start"
  >
    <div
      class="mx_DecryptionFailureBar_start_status"
    >
      <div
        data-testid="decryption-failure-bar-indicator"
      >
        <div
          class="mx_DecryptionFailureBar_start_status_icon"
          data-testid="decryption-failure-bar-icon"
        />
      </div>
    </div>
    <div
      class="mx_DecryptionFailureBar_start_headline"
    >
      Verify this device to access all messages
    </div>
    <div
      class="mx_DecryptionFailureBar_start_message"
    >
      This device was unable to decrypt some messages because it has not been verified yet.
    </div>
  </div>
  <div
    class="mx_DecryptionFailureBar_end"
  >
    <div
      class="mx_AccessibleButton mx_DecryptionFailureBar_end_button mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary"
      data-testid="decryption-failure-bar-button"
      role="button"
      tabindex="0"
    >
      Verify
    </div>
  </div>
</div>
`;

exports[`<DecryptionFailureBar /> Prompts the user to verify if they have other devices 1`] = `
<div
  class="mx_DecryptionFailureBar mx_DecryptionFailureBar--withEnd"
>
  <div
    class="mx_DecryptionFailureBar_start"
  >
    <div
      class="mx_DecryptionFailureBar_start_status"
    >
      <div
        data-testid="decryption-failure-bar-indicator"
      >
        <div
          class="mx_DecryptionFailureBar_start_status_icon"
          data-testid="decryption-failure-bar-icon"
        />
      </div>
    </div>
    <div
      class="mx_DecryptionFailureBar_start_headline"
    >
      Verify this device to access all messages
    </div>
    <div
      class="mx_DecryptionFailureBar_start_message"
    >
      This device was unable to decrypt some messages because it has not been verified yet.
    </div>
  </div>
  <div
    class="mx_DecryptionFailureBar_end"
  >
    <div
      class="mx_AccessibleButton mx_DecryptionFailureBar_end_button mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary"
      data-testid="decryption-failure-bar-button"
      role="button"
      tabindex="0"
    >
      Verify
    </div>
  </div>
</div>
`;
